[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/testSprites.png" type="Texture" id=1]
[ext_resource path="res://Scens/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scens/PicnicItem.gd" type="Script" id=3]
[ext_resource path="res://Sprites/lvelv2tileset.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.5, 4.75 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 4.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 5, 5 )

[node name="Chair" type="StaticBody2D"]
pause_mode = 1
collision_layer = 2
collision_mask = 0
script = ExtResource( 3 )

[node name="Item" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="Shadow" type="Sprite" parent="Item"]
visible = false
position = Vector2( 0, 2 )
texture = ExtResource( 1 )
hframes = 4
vframes = 8
frame = 22

[node name="CollisionShape2D" type="CollisionShape2D" parent="Item"]
position = Vector2( 0, 5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Item"]
position = Vector2( 1, 3 )
texture = ExtResource( 4 )
hframes = 19
frame = 5

[node name="Hitbox" parent="Item" instance=ExtResource( 2 )]
collision_layer = 0
collision_mask = 8
monitoring = false
monitorable = false

[node name="CollisionShape2D" parent="Item/Hitbox" index="0"]
visible = false
position = Vector2( 0, 5.5 )
shape = SubResource( 2 )

[node name="StaticCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 5 )
shape = SubResource( 5 )
disabled = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( 2.38419e-07, -1.5 )
scale = Vector2( 0.5, 0.85 )

[connection signal="area_entered" from="Item/Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]

[editable path="Item/Hitbox"]
